[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/buttonUI-50.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Menus.gd" type="Script" id=4]
[ext_resource path="res://Sprites/UIpack/PNG/grey_panel.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UIpack/PNG/red_boxCross.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UIpack/PNG/red_button04.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.933333, 0.933333, 0.933333, 1 )

[node name="Ui" type="Node2D" parent="."]

[node name="Menus" type="Node2D" parent="Ui"]
script = ExtResource( 4 )

[node name="MainMenu" type="Node2D" parent="Ui/Menus"]
script = ExtResource( 3 )

[node name="Tittle" type="Node2D" parent="Ui/Menus/MainMenu"]

[node name="Title" type="Label" parent="Ui/Menus/MainMenu/Tittle"]
margin_top = 150.0
margin_right = 576.0
margin_bottom = 230.0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo"
align = 1
valign = 1

[node name="Align" type="VBoxContainer" parent="Ui/Menus/MainMenu"]
margin_top = 400.0
margin_right = 576.0
margin_bottom = 628.0
custom_constants/separation = 30

[node name="Start" type="Button" parent="Ui/Menus/MainMenu/Align"]
margin_right = 576.0
margin_bottom = 56.0
focus_mode = 0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Start"
flat = true

[node name="Settings" type="Button" parent="Ui/Menus/MainMenu/Align"]
margin_top = 86.0
margin_right = 576.0
margin_bottom = 142.0
focus_mode = 0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Settings"
flat = true

[node name="Exit" type="Button" parent="Ui/Menus/MainMenu/Align"]
margin_top = 172.0
margin_right = 576.0
margin_bottom = 228.0
focus_mode = 0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Exit"
flat = true

[node name="Tween" type="Tween" parent="Ui/Menus/MainMenu"]

[node name="SaveMenu" type="Node2D" parent="Ui/Menus"]
position = Vector2( 576, 0 )
script = ExtResource( 3 )

[node name="Tittle" type="Node2D" parent="Ui/Menus/SaveMenu"]

[node name="Title" type="Label" parent="Ui/Menus/SaveMenu/Tittle"]
margin_top = 150.0
margin_right = 576.0
margin_bottom = 230.0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_fonts/font = SubResource( 1 )
text = "Saves"
align = 1
valign = 1

[node name="Align" type="VBoxContainer" parent="Ui/Menus/SaveMenu"]
margin_top = 400.0
margin_right = 576.0
margin_bottom = 628.0
custom_constants/separation = 30

[node name="Slot1" type="TextureButton" parent="Ui/Menus/SaveMenu/Align"]
margin_right = 576.0
margin_bottom = 150.0
texture_normal = ExtResource( 7 )
expand = true

[node name="Tween" type="Tween" parent="Ui/Menus/SaveMenu"]

[node name="SettingsMenu" type="Node2D" parent="Ui/Menus"]
position = Vector2( -576, 0 )
script = ExtResource( 3 )

[node name="Base" type="Node2D" parent="Ui/Menus/SettingsMenu"]
position = Vector2( 288, 0 )

[node name="TextureRect" type="TextureRect" parent="Ui/Menus/SettingsMenu/Base"]
margin_left = -220.0
margin_top = 360.0
margin_right = 220.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( 220, 150 )
texture = ExtResource( 5 )
expand = true

[node name="Align" type="VBoxContainer" parent="Ui/Menus/SettingsMenu/Base"]
margin_left = -288.0
margin_top = 439.0
margin_right = 288.0
margin_bottom = 581.0
custom_constants/separation = 30

[node name="Teste" type="Button" parent="Ui/Menus/SettingsMenu/Base/Align"]
margin_right = 576.0
margin_bottom = 56.0
focus_mode = 0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Teste"
flat = true

[node name="Teste2" type="Button" parent="Ui/Menus/SettingsMenu/Base/Align"]
margin_top = 86.0
margin_right = 576.0
margin_bottom = 142.0
focus_mode = 0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Teste"
flat = true

[node name="ExitSettings" type="TextureButton" parent="Ui/Menus/SettingsMenu/Base"]
margin_left = 152.0
margin_top = 348.0
margin_right = 233.0
margin_bottom = 422.0
texture_normal = ExtResource( 6 )
expand = true

[node name="Tween" type="Tween" parent="Ui/Menus/SettingsMenu"]

[connection signal="pressed" from="Ui/Menus/MainMenu/Align/Settings" to="Ui/Menus" method="_on_Settings_pressed"]
[connection signal="pressed" from="Ui/Menus/SettingsMenu/Base/ExitSettings" to="Ui/Menus" method="_on_ExitSettings_pressed"]
